# buzzvil-python-styleguide

./: .drone.yml  .gitignore  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
src/buzzvil_python_styleguide/: __init__.py  plugin.py  plugin.pyi
src/buzzvil_python_styleguide/styles/: black.toml  flake8.toml  mypy.toml  nitpick-style.toml
tests/: test_flake8_buzzvil.py  test_func_call_visitor.py
