[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "buzzvil_python_styleguide"
version = "0.1.0"
description = "Buzzvil's shared style preset"
authors = ["Isac Byeonghoon Yoo <isac.yoo@buzzvil.com>"]
maintainers = ["Isac Byeonghoon Yoo <isac.yoo@buzzvil.com>"]
readme = "README.rst"
repository = "https://github.com/Buzzvil/flake8-buzzvil"
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]


[tool.poetry.dependencies]
python = "~2.7 || ^3.6"
flake8 = ">=3.5"
black = { version = "^20.8b0", python = "^3.6" }
flake8-builtins = "^1.5.3"
mypy = { version = "^0.782", python = "^3.6" }
flake8-bugbear = { version = "^20.1.4", python = "^3.6" }
flake8-comprehensions = { version = "^3.2.3", python = "^3.6" }
flake8-django = { version = "^1.1.1", optional = true, python = "^3.6" }
flake8-eradicate = { version = "^0.4.0", python = "^3.6" }
flake8-mutable = "^1.2.0"
flake8-pytest-style = { version = "^1.3.0", python = "^3.6" }
pep8-naming = "^0.11.1"
flake8-functions = { version = "^0.0.4", python = "^3.6" }
flake8-annotations-complexity = { version = "^0.0.5", python = "^3.6" }
dlint = "^0.10.3"
django-stubs = { version = "^1.5.0", optional = true, python = "^3.6" }
flake8-black = {version = "^0.2.1", python = "^3.6"}
flake8-blind-except = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = [
    { version = "^4.4.0", python = "~2.7" },
    { version = "^6.0.0", python = "^3.6" }
]
nitpick = { version = "^0.22.2", python = "^3.6" }

[tool.poetry.extras]
django = ["django-stubs", "flake8-django"]

[[tool.poetry.source]]
name = "buzzvil"
url = "http://pypi.buzzvil-internal.com/"


[tool.poetry.plugins."flake8.extension"]
BZ = "buzzvil_python_styleguide:RequestsTimeoutPlugin"

[tool.poetry.plugins."bdist_wheel"]
universal = "1"


[tool.black]
exclude = "(\n  /(\n      .eggs\n    | .git\n    | .hg\n    | .mypy_cache\n    | .tox\n    | .venv\n    | _build\n    | buck-out\n    | build\n    | dist\n  )/\n  | /migrations/\n  | venv*\n)\n"
include = "\\.pyi?$"
line-length = 120
skip-string-normalization = true
target-version = ["py27", "py38"]


[tool.nitpick]
style = "src/buzzvil_python_styleguide/styles/nitpick-style.toml"

[nitpick.files."pyproject.toml"]
comma_separated_values = ["tool.black.exclude"]
