[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "buzzvil-python-styleguide"
version = "1.3.0"
description = "Buzzvil's shared style preset"
authors = ["Isac Byeonghoon Yoo <isac.yoo@buzzvil.com>"]
maintainers = ["Isac Byeonghoon Yoo <isac.yoo@buzzvil.com>"]
readme = "README.md"
repository = "https://github.com/Buzzvil/buzzvil-python-styleguide"
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]


[tool.poetry.dependencies]
python = "^3.6.2"
black = "^21.9b0"
django-stubs = { version = "^1.9.0", optional = true }
flake8 = ">=3.8"
flake8-annotations-complexity = "^0.0.6"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^21.9.2"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.7.0"
flake8-datetimez = "^20.10.0"
flake8-django = { version = "^1.1.2", optional = true }
flake8-eradicate = "^1.2.0"
flake8-force-keyword-arguments = "^1.0.3"
flake8-functions = "^0.0.6"
flake8-future-import = "^0.4.6"
flake8-logging-format = "^0.6.0"
flake8-print = "^4.0.0"
flake8-pytest-style = "^1.5.0"
flake8-return = "^1.1.3"
importlib-metadata = {version = "*", python = "<3.8"}
mypy = ">=0.910"
nitpick = "^0.28.0"
pep8-naming = "^0.12.1"
typing-extensions = { version = "^4.0.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.extras]
django = ["django-stubs", "flake8-django"]


[tool.poetry.plugins."flake8.extension"]
BZ = "buzzvil_python_styleguide:RequestsTimeoutPlugin"


[tool.black]
force-exclude = "(\n  /(\n    \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n  )/\n  | migrations/\n  | venv.?\n)\n"
line-length = 120
skip-string-normalization = true
target-version = ["py36", "py37", "py38", "py39"]


[tool.nitpick]
style = "py://buzzvil_python_styleguide/styles/nitpick-style.toml"
cache = "never"

[tool.mypy]
allow_redefinition = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
no_warn_no_return = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

# Output configuration
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
